Optimizing code, increasing code coverage and fixing sonarQube issues